Bring the orb up on a known port

--- a/ArjunaJTS/recovery/src/main/resources/jacorb.properties
+++ b/ArjunaJTS/recovery/src/main/resources/jacorb.properties
@@ -329,7 +329,7 @@ jacorb.interop.chunk_custom_rmi_valuetypes=on
 # object references). NOTE: Adresses like 127.0.0.X
 # will only be accessible from the same machine!
 #OAIAddr=1.2.3.4
-#OAPort=4711
+OAPort=37310
 
 
 ############################
