Updated to use narayana dependencies

--- a/ArjunaJTA/jee_transactional_app/pom.xml
+++ b/ArjunaJTA/jee_transactional_app/pom.xml
@@ -156,8 +156,8 @@
     </dependency>
     <!-- For the txoj -->
     <dependency>
-      <groupId>org.jboss.jbossts</groupId>
-      <artifactId>jbossjta</artifactId>
+      <groupId>org.jboss.narayana.quickstarts.jta</groupId>
+      <artifactId>narayana-jta</artifactId>
       <version>5.0.0.M2-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
