--- a/TXBridge/demo/demo-test/pom.xml
+++ b/TXBridge/demo/demo-test/pom.xml
@@ -4,7 +4,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.jboss.jbossts</groupId>
+    <groupId>org.jboss.narayana.quickstarts.txbridge</groupId>
     <artifactId>txbridgedemo-test</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
