--- a/ArjunaJTA/maven/pom.xml
+++ b/ArjunaJTA/maven/pom.xml
@@ -77,7 +77,7 @@ read this as the JBoss stack of the Java EE 6 Web Profile APIs) -->
             <dependency>
                 <groupId>org.jboss.spec</groupId>
                 <artifactId>jboss-javaee-web-6.0</artifactId>
-                <version>${javaee6.spec.version}</version>
+                <version>3.0.0.Beta1</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
