--- a/blacktie/pom.xml
+++ b/blacktie/pom.xml
@@ -37,7 +37,7 @@
                                 <phase>compile</phase>
                                 <configuration>
                                     <target>
-                                        <exec dir="${env.WORKSPACE}/blacktie" executable="cmd">
+                                        <exec dir="${env.WORKSPACE}/blacktie" executable="cmd" failonerror="true">
                                             <arg line="/c test\blacktie-vc9x32.bat"/>
                                         </exec>
                                     </target>
