Run the XTS demo as part of quickstarts

--- a/pom.xml
+++ b/pom.xml
@@ -128,5 +128,6 @@
     <module>ArjunaCore</module>
     <module>ArjunaJTA</module>
     <module>rest-tx</module>
+    <module>XTS</module>
   </modules>
 </project>
