--- a/ArjunaJTS/trailmap/pom.xml
+++ b/ArjunaJTS/trailmap/pom.xml
@@ -1,170 +1,102 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- JBoss, Home of Professional Open Source Copyright 2008, Red Hat Middleware 
+	LLC, and others contributors as indicated by the @authors tag. All rights 
+	reserved. See the copyright.txt in the distribution for a full listing of 
+	individual contributors. This copyrighted material is made available to anyone 
+	wishing to use, modify, copy, or redistribute it subject to the terms and 
+	conditions of the GNU Lesser General Public License, v. 2.1. This program 
+	is distributed in the hope that it will be useful, but WITHOUT A WARRANTY; 
+	without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR 
+	PURPOSE. See the GNU Lesser General Public License for more details. You 
+	should have received a copy of the GNU Lesser General Public License, v.2.1 
+	along with this distribution; if not, write to the Free Software Foundation, 
+	Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <!-- JBoss, Home of Professional Open Source Copyright 2009, Red Hat Middleware 
-		LLC, and individual contributors as indicated by the @author tags. See the 
-		copyright.txt in the distribution for a full listing of individual contributors. 
-		This copyrighted material is made available to anyone wishing to use, modify, 
-		copy, or redistribute it subject to the terms and conditions of the GNU Lesser 
-		General Public License, v. 2.1. This program is distributed in the hope that 
-		it will be useful, but WITHOUT A WARRANTY; without even the implied warranty 
-		of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser 
-		General Public License for more details. You should have received a copy 
-		of the GNU Lesser General Public License, v.2.1 along with this distribution; 
-		if not, write to the Free Software Foundation, Inc., 51 Franklin Street, 
-		Fifth Floor, Boston, MA 02110-1301, USA. (C) 2009, @author JBoss Inc. (jonathan.halliday@redhat.com) -->
-  <parent>
-    <groupId>org.jboss.narayana.jts</groupId>
-    <artifactId>narayana-jts-all</artifactId>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>org.jboss.narayana.jts.quickstart</groupId>
+    <artifactId>narayana-jts-quickstart-trailmap</artifactId>
     <version>5.0.0.M2-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
-  </parent>
-  <modelVersion>4.0.0</modelVersion>
-  <artifactId>trailmap</artifactId>
-  <packaging>jar</packaging>
-  <name>JBossJTS Trailmap documentation</name>
-  <description>jts trailmap</description>
-  <build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-antrun-plugin</artifactId>
-        <version>1.6</version>
-        <executions>
-          <execution>
-            <phase>compile</phase>
-            <configuration>
-              <target>
-
-    <!-- Where the transaction has been installed to, this should not need changing by default -->
-    <property name="jbosstshome" value=".."/>
-
-    <!-- This source code directory for the trailmap -->
-    <property name="src" value="src"/>
-
-    <!-- Where the trailmap source code should be built to -->
-    <property name="build" value="build"/>
-
-    <!-- The directory where the trailmap JAR should be created under -->
-    <property name="lib" value="lib"/>
-
-    <!-- The location of JacORB to use. This should not need changing unless a different version of JacORB is used -->
-    <property name="jacorb-home" value="${jbosstshome}/jacorb"/>
-
-    <!-- The location of the Arjuna IDL files used by the JTS -->
-    <property name="jbossts-include" value="${jbosstshome}/idl"/>
-
-    <!-- The include files required by JacORB -->
-    <property name="jacorb-include" value="${jacorb-home}/idl/omg"/>
-
-
+    <name>${project.artifactId}</name>
+    <description>${project.artifactId}</description>
+    <packaging>jar</packaging>
     <!--
-        This target is responsible for final assembly of the trailmap JAR file. It uses the compile dependency to
-        ensure that the code has already been built.
-    -->
-    <target name="buildjar" depends="compile">
-        <jar basedir="${build}" jarfile="${lib}/jbossts-demo.jar"/>
-    </target>
-
-
-    <!--
-        The compile target is responsible for compiling the source code into the build directory. Before compilation
-        can take place the target requires a dependency target idl to have completed.
-    -->
-    <target name="compile" depends="idl">
-        <javac srcdir="${src}" destdir="${build}">
-            <classpath>
-                <fileset dir="${jbosstshome}/lib" includes="*.jar"/>
-                <fileset dir="${jbosstshome}/lib/ext" includes="*.jar,*.zip"/>
-                <fileset dir="${jacorb-home}/lib" includes="*.jar"/>
-            </classpath>
-        </javac>
-    </target>
-
-
-    <!--
-        The idl target is used to create the stub classes for the trailmap. It requires that the build directories
-        already exist, hence the dependency on prepare.
-    -->
-    <target name="idl" depends="prepare">
-
-        <!-- Create the stub classes for the installation verification step of the trailmap -->
-        <java classname="org.jacorb.idl.parser" fork="yes">
-            <classpath>
-                <fileset dir="${jacorb-home}/lib" includes="*.jar"/>
-            </classpath>
-            <arg value="-I${jbossts-include}"/>
-            <arg value="-I${jacorb-include}"/>
-            <arg line="-d ${src}/generated"/>
-            <arg value="${src}/com/arjuna/demo/simple/Hello.idl"/>
-        </java>
-
-        <!-- Create the stub classes for the implicit propogation Bank sample -->
-        <java classname="org.jacorb.idl.parser" fork="yes">
-            <classpath>
-                <fileset dir="${jacorb-home}/lib" includes="*.jar"/>
-            </classpath>
-            <arg value="-I${jbossts-include}"/>
-            <arg value="-I${jacorb-include}"/>
-            <arg line="-d ${src}/generated"/>
-            <arg value="${src}/com/arjuna/demo/jts/remotebank/Bank.idl"/>
-        </java>
-
-        <!-- Create the stub classes for the explicit propogation Bank sample -->
-        <java classname="org.jacorb.idl.parser" fork="yes">
-            <classpath>
-                <fileset dir="${jacorb-home}/lib" includes="*.jar"/>
-            </classpath>
-            <arg value="-I${jbossts-include}"/>
-            <arg value="-I${jacorb-include}"/>
-            <arg line="-d ${src}/generated"/>
-            <arg value="${src}/com/arjuna/demo/jts/explicitremotebank/Bank.idl"/>
-        </java>
-
-        <!-- Create the stub classes for the JBoss Transactional-Objects for Java extension Bank sample -->
-        <java classname="org.jacorb.idl.parser" fork="yes">
-            <classpath>
-                <fileset dir="${jacorb-home}/lib" includes="*.jar"/>
-            </classpath>
-            <arg value="-I${jbossts-include}"/>
-            <arg value="-I${jacorb-include}"/>
-            <arg line="-d ${src}/generated"/>
-            <arg value="${src}/com/arjuna/demo/jts/txojbank/Bank.idl"/>
-        </java>
-    </target>
-
-
-    <!--
-        Prepare is the base target for building the trailmap. It is responsible for ensuring that the
-        directories required by the rest of the trailmap build system are present
-    -->
-    <target name="prepare">
-        <mkdir dir="${build}"/>
-        <mkdir dir="${lib}"/>
-    </target>
-
-
-    <!--
-        This target is reponsible for cleaning the build directories. It may be invoked before buildjar to ensure
-        that no old classes remain (if the user has changed the source code)
-    -->
-    <target name="clean" description="clean up">
-        <delete dir="${build}"/>
-        <delete dir="${lib}"/>
-    </target>
-              </target>
-              <dependencies>
-                <dependency>
-                  <groupId>org.apache.ant</groupId>
-                  <artifactId>ant-trax</artifactId>
-                  <version>1.8.0</version>
-                </dependency>
-              </dependencies>
-            </configuration>
-            <goals>
-              <goal>run</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
+    <repositories>
+        <repository>
+            <id>jboss-public-repository-group</id>
+            <name>JBoss Public Maven Repository Group</name>
+            <url>https://repository.jboss.org/nexus/content/groups/public/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+-->
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <!-- https://repository.jboss.org/nexus/content/groups/public-jboss/org/jboss/as/jboss-as-parent/7.0.0.Final/jboss-as-parent-7.0.0.Final.pom -->
+                <groupId>org.jboss.as</groupId>
+                <artifactId>jboss-as-parent</artifactId>
+                <version>7.1.1.Final</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+    <dependencies>
+        <dependency>
+            <groupId>org.jboss.narayana.jts</groupId>
+            <artifactId>narayana-jts</artifactId>
+            <version>5.0.0.M2-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.spec.javax.transaction</groupId>
+            <artifactId>jboss-transaction-api_1.1_spec</artifactId>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>idlj-maven-plugin</artifactId>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.jacorb</groupId>
+                        <artifactId>jacorb-idl-compiler</artifactId>
+                        <version>2.2.3</version>
+                    </dependency>
+                </dependencies>
+                <executions>
+                    <execution>
+                        <id>generate-sources</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <compiler>jacorb</compiler>
+                            <sources>
+                                <source>
+                                    <includes>
+                                        <include>com/arjuna/demo/simple/Hello.idl</include>
+                                        <include>com/arjuna/demo/jts/remotebank/Bank.idl</include>
+                                        <include>com/arjuna/demo/jts/explicitremotebank/Bank.idl</include>
+                                        <include>com/arjuna/demo/jts/txojbank/Bank.idl</include>
+                                    </includes>
+                                    <additionalArguments>
+                                        <additionalArgument>-DORB_OTS_SUPPORT=1</additionalArgument>
+                                        <additionalArgument>-DORB_CURRENT_SUPPORT=1</additionalArgument>
+                                    </additionalArguments>
+                                </source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
