BLACKTIE-291 updated to connect to the newly formatted BlackTie artifacts

--- a/blacktie/jatmibroker-xatmi/mdb/pom.xml
+++ b/blacktie/jatmibroker-xatmi/mdb/pom.xml
@@ -67,7 +67,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.jboss.narayana.blacktie</groupId>
-			<artifactId>jatmibroker-xatmi</artifactId>
+			<artifactId>blacktie-jatmibroker-xatmi</artifactId>
 			<version>5.0.0.M2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
