--- a/blacktie/jatmibroker-xatmi/java-server/pom.xml
+++ b/blacktie/jatmibroker-xatmi/java-server/pom.xml
@@ -55,7 +55,7 @@
     <dependencies>
         <dependency>
             <groupId>org.jboss.narayana.blacktie</groupId>
-            <artifactId>jatmibroker-xatmi</artifactId>
+            <artifactId>blacktie-jatmibroker-xatmi</artifactId>
             <version>5.0.0.M2-SNAPSHOT</version>
         </dependency>
     </dependencies>
