--- a/blacktie/jatmibroker-xatmi/java-server/pom.xml
+++ b/blacktie/jatmibroker-xatmi/java-server/pom.xml
@@ -18,7 +18,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.jboss.narayana.blacktie</groupId>
-    <artifactId>quickstart-java-server</artifactId>
+    <artifactId>blacktie-quickstarts-java-server</artifactId>
     <version>5.0.0.M2-SNAPSHOT</version>
     <packaging>jar</packaging>
     <description>A BlackTie component</description>
