--- a/blacktie/integration1/ejb/pom.xml
+++ b/blacktie/integration1/ejb/pom.xml
@@ -18,7 +18,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.jboss.narayana.blacktie.quickstarts</groupId>
-    <artifactId>integration1-ejb</artifactId>
+    <artifactId>blacktie-quickstarts-integration1-ejb</artifactId>
     <version>5.0.0.M2-SNAPSHOT</version>
     <packaging>ejb</packaging>
     <name>Integration 1 - Quickstart EJB</name>
