--- a/blacktie/pom.xml
+++ b/blacktie/pom.xml
@@ -14,7 +14,7 @@
 		Fifth Floor, Boston, MA 02110-1301, USA. (C) 2009, @author JBoss Inc. (jonathan.halliday@redhat.com) -->
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.jboss.narayana.quickstarts.blacktie</groupId>
-    <artifactId>blacktie-all</artifactId>
+    <artifactId>blacktie-quickstarts-all</artifactId>
     <version>5.0.0.M2-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>blacktie-all</name>
