JBTM-1094 TXFramework Quickstart: Simplified API, WS-BA

--- a/TXFramework/pom.xml
+++ b/TXFramework/pom.xml
@@ -22,5 +22,6 @@
     </build>
     <modules>
         <module>wsat-simple</module>
+        <module>wsba-participant-completion-simple</module>
     </modules>
 </project>
