--- a/TXFramework/wsba-participant-completion-simple/pom.xml
+++ b/TXFramework/wsba-participant-completion-simple/pom.xml
@@ -3,12 +3,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.jboss.narayana.quickstart.txframework.wsat-simple</groupId>
-    <artifactId>wsat-simple-all</artifactId>
+    <groupId>org.jboss.narayana.quickstart.txframework.wsba-participant-completion-simple</groupId>
+    <artifactId>wsba-participant-completion-simple-all</artifactId>
     <version>5.0.0.M2-SNAPSHOT</version>
     <packaging>war</packaging>
-    <name>JBoss Narayana Quickstarts: Simple WS-AT Web service using the TXFramework</name>
-    <description>JBoss Narayana Quickstarts: Simple WS-AT Web service using the TXFramework</description>
+    <name>JBoss Narayana Quickstarts: Simple WS-BA with participant completion Web service using the TXFramework</name>
+    <description>JBoss Narayana Quickstarts: Simple WS-BA with participant completion Web service using the TXFramework</description>
 
     <properties>
         <!-- Explicitly declaring the source encoding eliminates the following
@@ -19,59 +19,27 @@
         <jboss-as.version>7.1.2.Final-SNAPSHOT</jboss-as.version>
     </properties>
 
-    <!-- We add the JBoss repository as we need the JBoss AS connectors
-  for Arquillian and also for the Narayana libraries-->
-    <repositories>
-        <!-- The JBoss Community public repository is a composite repository
-    of several major repositories -->
-        <!-- see http://community.jboss.org/wiki/MavenGettingStarted-Users -->
-        <repository>
-            <id>jboss-public-repository</id>
-            <name>JBoss Repository</name>
-            <url>http://repository.jboss.org/nexus/content/groups/public</url>
-            <!-- These optional flags are designed to speed up your builds
-       by reducing remote server calls -->
-            <releases>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>jboss-public-repository</id>
-            <name>JBoss Repository</name>
-            <url>http://repository.jboss.org/nexus/content/groups/public</url>
-            <releases>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </pluginRepository>
-    </pluginRepositories>
 
     <dependencyManagement>
         <dependencies>
-            <!-- Define the version of JBoss' Java EE 6 APIs and Tools we want to import.  -->
+        <!-- Define the version of JBoss' Java EE 6 APIs and Tools we want to import.  -->
 
-            <!-- JBoss distributes a complete set of Java EE 6 APIs including a Bill
-           of Materials (BOM). A BOM specifies the versions of a "stack" (or a collection)
-           of artifacts. We use this here so that we always get the correct versions
-           of artifacts.-->
+        <!-- JBoss distributes a complete set of Java EE 6 APIs including a Bill
+          of Materials (BOM). A BOM specifies the versions of a "stack" (or a collection)
+          of artifacts. We use this here so that we always get the correct versions
+          of artifacts.-->
 
-            <!-- This BOM provides the jboss-javaee-6.0 with tools stack (you can read this as
-        the JBoss stack of the Java EE 6 APIs, with some extras tools for your project, such
-        as Arquillian for testing) -->
-            <dependency>
-                <groupId>org.jboss.bom</groupId>
-                <artifactId>jboss-javaee-6.0-with-tools</artifactId>
-                <version>1.0.0.M7</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
+          <!-- This BOM provides the jboss-javaee-6.0 with tools stack (you can read this as
+          the JBoss stack of the Java EE 6 APIs, with some extras tools for your project, such
+          as Arquillian for testing) -->
+         <dependency>
+            <groupId>org.jboss.bom</groupId>
+            <artifactId>jboss-javaee-6.0-with-tools</artifactId>
+            <version>1.0.0.M7</version>
+            <type>pom</type>
+            <scope>import</scope>
+         </dependency>
+      </dependencies>
     </dependencyManagement>
 
     <dependencies>
@@ -109,7 +77,7 @@
         <dependency>
             <groupId>javax.enterprise</groupId>
             <artifactId>cdi-api</artifactId>
-            <scope>provided</scope>
+            <scope>test</scope>
         </dependency>
 
         <!-- Import the Common Annotations API (JSR-250), we use provided scope
@@ -142,9 +110,6 @@
     </dependencies>
 
     <build>
-        <!-- Set the name of the war, used as the context root when the app is
-              deployed -->
-        <finalName>wsat-simple</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-war-plugin</artifactId>
@@ -154,18 +119,18 @@
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                     <archive>
                         <manifestEntries>
-                            <Dependencies>org.jboss.xts</Dependencies>
+                            <Dependencies>org.jboss.narayana.txframework</Dependencies>
                         </manifestEntries>
                     </archive>
                 </configuration>
             </plugin>
-            <!-- JBoss AS plugin to deploy war -->
+            <!-- JBoss AS deployment disabled, as this is a test-only example! -->
             <plugin>
                 <groupId>org.jboss.as.plugins</groupId>
                 <artifactId>jboss-as-maven-plugin</artifactId>
                 <version>7.1.1.Final</version>
                 <configuration>
-                    <skip>true</skip>
+                  <skip>true</skip>
                 </configuration>
             </plugin>
             <!-- Compiler plugin enforces Java 1.6 compatibility and activates
