--- a/TXFramework/pom.xml
+++ b/TXFramework/pom.xml
@@ -21,6 +21,7 @@
         </plugins>
     </build>
     <modules>
+        <module>restat-simple</module>
         <module>wsat-jta-bridge</module>
         <module>wsat-simple</module>
         <module>wsba-participant-completion-simple</module>
