--- a/pom.xml
+++ b/pom.xml
@@ -132,5 +132,6 @@
     <module>XTS</module>
     <!-- Currently depends on the XTS demo -->
     <module>TXBridge</module>
+    <module>fileio</module>
   </modules>
 </project>
