--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,7 @@
     <module>ArjunaJTA</module>
     <module>ArjunaJTS</module>
     <module>rest-tx</module>
+    <module>TXBridge</module>
     <module>XTS</module>
   </modules>
 </project>
