JBTM-1177_The_TXBridge_demo-test_fails_to_find_required_build_artifacts

--- a/pom.xml
+++ b/pom.xml
@@ -131,5 +131,7 @@
     <module>rest-tx</module>
     <module>TXBridge</module>
     <module>XTS</module>
+    <!-- Currently depends on the XTS demo -->
+    <module>TXBridge</module>
   </modules>
 </project>
