--- a/TXFramework/wsat-simple/pom.xml
+++ b/TXFramework/wsat-simple/pom.xml
@@ -17,6 +17,7 @@
   resources, i.e. build is platform dependent! -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jboss-as.version>7.1.2.Final-SNAPSHOT</jboss-as.version>
+        <narayana.version>5.0.0.M2-SNAPSHOT</narayana.version>
     </properties>
 
     <!-- We add the JBoss repository as we need the JBoss AS connectors
@@ -80,7 +81,7 @@
             <groupId>org.jboss.narayana.xts</groupId>
             <artifactId>jbossxts</artifactId>
             <classifier>api</classifier>
-            <version>5.0.0.M2-SNAPSHOT</version>
+            <version>${narayana.version}</version>
             <scope>provided</scope>
             <exclusions>
                 <exclusion>
@@ -94,7 +95,7 @@
         <dependency>
             <groupId>org.jboss.narayana.txframework</groupId>
             <artifactId>txframework</artifactId>
-            <version>5.0.0.M2-SNAPSHOT</version>
+            <version>${narayana.version}</version>
             <scope>provided</scope>
             <exclusions>
                 <exclusion>
