JBTM-1214 rename narayana-jts to narayana-jts-jacorb

--- a/ArjunaJTS/pom.xml
+++ b/ArjunaJTS/pom.xml
@@ -95,7 +95,7 @@
     </dependency>
     <dependency>
       <groupId>org.jboss.narayana.jts</groupId>
-      <artifactId>narayana-jts</artifactId>
+      <artifactId>narayana-jts-jacorb</artifactId>
       <version>5.0.0.M2-SNAPSHOT</version>
     </dependency>
     <dependency>
