--- a/rest-tx/demo/pom.xml
+++ b/rest-tx/demo/pom.xml
@@ -8,8 +8,14 @@
   <modelVersion>4.0.0</modelVersion>
   <packaging>war</packaging>
   <artifactId>demo</artifactId>
-  <name>RESTful Atomic Transaction Quickstart: Demonstration of Participant Service with Recovery</name>
+  <name>RESTAT Quickstart: Demonstration of Participant Service with Recovery</name>
   <description>Example of how a web service can recover from failures during transaction completion</description>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.build.timestamp.format>yyyyMMdd'T'HHmmss</maven.build.timestamp.format>
+  </properties>
+
   <repositories>
     <!-- Jersey -->
     <repository>
@@ -49,15 +55,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
         <version>2.1.1</version>
-        <configuration>
-          <!-- Java EE 6 doesn't require web.xml, Maven needs to catch up! -->
-          <!--failOnMissingWebXml>false</failOnMissingWebXml-->
-          <!--<archive>
-            <manifestEntries>
-              <Dependencies>org.jboss.jts</Dependencies>
-            </manifestEntries>
-          </archive>-->
-        </configuration>
       </plugin>
     </plugins>
   </build>
@@ -65,9 +62,8 @@
     <!-- the implementation of REST Atomic Transactions -->
     <dependency>
       <groupId>org.jboss.narayana.rts</groupId>
-      <artifactId>rest-tx-api</artifactId>
+      <artifactId>restat-api</artifactId>
       <version>5.0.0.M2-SNAPSHOT</version>
-      <!--      <scope>provided</scope>-->
     </dependency>
     <!-- Jersey container for running participant services -->
     <dependency>
