--- a/TXFramework/wsat-jta-bridge/pom.xml
+++ b/TXFramework/wsat-jta-bridge/pom.xml
@@ -16,7 +16,7 @@
         <!-- [WARNING] Using platform encoding (UTF-8 actually) to copy filtered
   resources, i.e. build is platform dependent! -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jboss-as.version>7.1.2.Final-SNAPSHOT</jboss-as.version>
+        <jboss-as.version>7.2.0.Alpha1-SNAPSHOT</jboss-as.version>
         <narayana.version>5.0.0.M2-SNAPSHOT</narayana.version>
     </properties>
 
@@ -177,7 +177,7 @@
             <plugin>
                 <groupId>org.jboss.as.plugins</groupId>
                 <artifactId>jboss-as-maven-plugin</artifactId>
-                <version>7.1.1.Final</version>
+                <version>7.2.0.Alpha1-SNAPSHOT</version>
                 <configuration>
                     <skip>true</skip>
                 </configuration>
